Coverity analysis defect 177337: Explicit null dereferenced

XMLWordPrintableJSON

    • Query Execution
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Explicit null dereferenced

      A null pointer dereference will occur. Dereference of an explicit null value
      /src/mongo/db/query/stage_builder/sbe/gen_extract_field_paths.cpp:149: FORWARD_NULL 177337 "stage" becomes empty.
      /src/mongo/db/query/stage_builder/sbe/gen_extract_field_paths.cpp:149: FORWARD_NULL 177337 Attempting to access the managed object of an empty smart pointer "stage".

            Assignee:
            Foteini Alvanaki
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: