SERVER-111720 Read nodeId before moving stage (#42031)

GitOrigin-RevId: 280b6c4dc79e2c369905ec736b310b4eaf6a05ab